tests/src/frontend/syntax/invalid/lvalue_bad_binary.sk
fun main(): String {
  a + b = 42;
  "Fail"
}
